welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:13: error: type mismatch;
 found   : Unit
 required: Boolean
			else if(hour>7 && hour<20)
                             ^